tests/parser/tests/cases/should_fail/missing_default_value_in_function_literal/case.stderr
error: failed to parse
 --> $DIR/case.hash:3:20
2 |   
3 |   foo := (l: u32, k = ) -> u32 => { // error here!
  |                      ^ here
4 |       l * k
  = note: expected an expression.
